src/test/ui/feature-gates/feature-gate-extern_absolute_paths.stderr
error[E0423]: expected function, found trait `core::default::Default`
  --> $DIR/feature-gate-extern_absolute_paths.rs:4:17
   |
LL |     let _: u8 = ::core::default::Default();
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^ not a function

error: aborting due to previous error

For more information about this error, try `rustc --explain E0423`.
