src/test/ui/feature-gates/feature-gate-extern_absolute_paths.rs
use core::default;

fn main() {
    let _: u8 = ::core::default::Default();
    //~^ ERROR expected function, found trait `core::default::Default`
}
